tests/fail/build_meta.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
pub const package = (
    name = "toka_app",
    version = "0.1.0"
)

shape Point (
    a: i32,
    b: i32,
    c: i32
)

pub const POINT = Point(a = 1, b = 2, c = 3)

// 匿名记录常量 (Anonymous Record Constant)
// 类型被推导为 （ x: i32, y: i32, z: i32 ）
// 匿名记录的类型是独一无二的（Generative Typing（生成式类型）），不能与任何其他类型互换
// 当(x = 1...)的左边没有任何的类型名字时 他就是一个匿名记录的类型声明+原地实例化+初始化（原地创世 (In-place Creation)）
pub const XYZ = (x = 1, y = 2, z = 3)

fn main() -> i32 {
    println("{}", POINT.a)
    println("{}", XYZ.x)
    auto point = Point(a = 1, b = 2, c = 3)
    auto xyz = (x = 1, y = 2, z = 3)
    println("{}", point.a)
    println("{}", xyz.x)
    return 0
}